# parallel_programming_problems

./: .gitignore
.github/workflows/: solver_benchmark.yml
QAP_python/: README.md  pyproject.toml
QAP_python/scripts/: benchmark_all.py
QAP_python/src/qap_solver/: __init__.py  cli.py  evaluate.py  io.py  problem.py
QAP_python/src/qap_solver/benchmarks/: __init__.py
QAP_python/src/qap_solver/benchmarks/data/: chr12a.sln  tai12a.sln
QAP_python/src/qap_solver/solvers/: __init__.py  base.py  brute_force.py  dynamic_programming.py  genetic_algorithm.py  parallel.py  simulated_annealing.py
QAP_python/tests/: conftest.py  test_brute_force.py  test_cli.py  test_dynamic_programming.py  test_evaluate.py  test_genetic_algorithm.py  test_io.py  test_parallel.py  test_problem.py  test_simulated_annealing.py
