[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qap-solver"
version = "0.1.0"
description = "Solve the Quadratic Assignment Problem with multiple methods: brute-force, DP, simulated annealing, genetic algorithm, and parallel solvers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["quadratic-assignment-problem", "optimization", "combinatorial", "metaheuristic", "parallel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
qap-solve = "qap_solver.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["qap_solver*"]

[tool.setuptools.package-data]
"qap_solver.benchmarks" = ["data/*.dat", "data/*.sln"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
